# shop_store_project

./: alembic.ini  pyproject.toml  requirements.txt
src/: .env  .env_example  config.py  database.py  logging_config.py  main.py
src/app/: auth.py  categories.py  customers.py  dependencies.py  managers.py  materialized_views.py  orders.py  products.py  products_with_services.py  regions.py  services.py
src/migrations/: env.py
src/migrations/versions/: 2025_01_22_1840-c8b3dedf505d_first_migration.py  2025_01_22_2014-253e8993a03d_add_user_id_to_orders_table_and_create_.py  2025_02_02_2210-71607565d8ce_update_products_model_with_tsv_column.py  2025_02_02_2222-e608b754b32d_update_products_model_with_tsv_column_.py  2025_02_02_2253-d2a802630447_update_products_model_without_tsv_.py  2025_02_06_1240-a7354b538e63_update_pws_and_add_m2m_table_services.py  2025_02_09_1139-42d97b263ed1_update_pws_and_add_m2m_table_services_.py  2025_02_10_2001-3e91f319daf6_update_ordersorm.py  (+3 more)
src/models/: __init__.py  categories.py  customers.py  managers.py  orders.py  products.py  products_with_services.py  regions.py  roles.py  services.py  users.py
src/repositories/: __init__.py  base.py  categories.py  customers.py  managers.py  orders.py  products.py  products_with_services.py  products_with_services_services.py  regions.py  roles.py  services.py  users.py
src/schemas/: categories.py  customers.py  managers.py  orders.py  products.py  products_with_services.py  regions.py  roles.py  services.py  users.py
src/services/: auth.py
src/utils/: db_manager.py  materialized_views.py
(+5 files in other folders)
