[project]
name = "backendshopstore"
version = "0.1.0"
description = "Materialized Views & Index"
authors = [
    {name = "Andrey Ivanov",email = "ai3501669@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pyright (>=1.1.392.post0,<2.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
